--- a/01-node-ecosystem/package.json
+++ b/01-node-ecosystem/package.json
@@ -4,8 +4,12 @@
   "description": "401d24 lab 01",
   "main": "index.js",
   "scripts": {
-    "test": "./01-node-ecosystem/lab-Ovi/test/lib/greet.test.js --verbose --coverage"
+    "test": "./01-node-ecosystem/lab-Ovi/test/lib/greet.test.js --verbose --coverage, ./01-node-ecosystem/lab-Ovi/test/lib/arithmetic.test.js --verbose --coverage",
+    "lint" : "eslint **/*.js"
   },
   "author": "Ovidiu Parasca",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^4.19.1"
+  }
 }
