--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "401d24 lab 01",
   "main": "index.js",
   "scripts": {
-    "test": "./01-node-ecosystem/lab-Ovi/test/lib/greet.test.js --verbose --coverage",
+    "test": "jest ./01-node-ecosystem/lab-Ovi/test/lib/greet.test.js --verbose --coverage",
     "lint": "eslint **/*.js"
   },
   "author": "Ovidiu Parasca",
   "license": "ISC",
   "dependencies": {
+    "jest": "^22.4.3",
     "eslint": "^4.19.1"
   }
 }
