--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "401d24 lab 01",
   "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "test": "node ./lab-Ovi/test/lib/greet.test.js ./lab-Ovi/test/lib/arithmetic.test.js",
     "lint": "eslint **/*.js"
