--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "node ./lab-Ovi/test/lib/greet.test.js --verbose --coverage",
+    "test": "node ./test/lib/greet.test.js && node .test/lib/arithmetic.test.js",
     "lint": "eslint **/*.js"
   },
   "author": "Ovidiu Parasca",
